--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://aszala-UNC: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@github.com/jdmar3-comp426/a02-aszala-UNC.git"
   },
   "author": "aszala-UNC",
-  "license": "GNU",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/jdmar3-comp426/a02-aszala-UNC/issues"
   },
